WIP: Eliminate DataContainerArchetype.Builder
Refactor internal

JIRA: YANGTOOLS-1578
Change-Id: I304ecdbe481287cfb3843d1424ff342b4cce22dc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>